New vehicle ID can be generated
